# singularity-parser-mermaid

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  package.json  pyproject.toml
bindings/python/tree_sitter_mermaid.egg-info/: PKG-INFO  requires.txt
docs/: PRODUCTION_READINESS.md  PUBLISHING.md  TESTING.md
src/: parser.c
