[package]
name = "tree-sitter-mermaid"
description = "🚀 Singularity tree-sitter-mermaid - Complete Mermaid.js grammar for tree-sitter with 100% test coverage (23/23 diagram types)"
version = "0.9.1"
keywords = ["mermaid", "tree-sitter", "parser", "diagram", "grammar"]
categories = ["parsing", "text-editors", "development-tools"]
repository = "https://github.com/Singularity-ng/singularity-parser-mermaid"
homepage = "https://github.com/Singularity-ng/singularity-parser-mermaid"
documentation = "https://docs.rs/tree-sitter-mermaid"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["Mikael Hugo <mikkihugo@users.noreply.github.com>"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.26"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["parser"]
parser = []

# Enable all features for development
[package.metadata.docs.rs]
features = ["parser"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[workspace]

