[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-mermaid"
description = "🚀 Singularity tree-sitter-mermaid - Complete Mermaid.js grammar for tree-sitter with 100% test coverage (23/23 types)"
version = "0.9.1"
keywords = ["mermaid", "tree-sitter", "parser", "diagram", "grammar"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Singularity-ng/singularity-parser-mermaid"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
